--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ coreschema==0.0.4
 Django==4.1.3
 django-environ==0.9.0
 django-extensions==3.2.1
+django-phonenumber-field==7.0.0
+django-phonenumbers==1.0.1
 django-rest-swagger==2.2.0
 django-storages==1.13.1
 djangorestframework==3.14.0
@@ -14,9 +16,12 @@ idna==3.4
 itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+numpy==1.23.5
 openapi-codec==1.3.2
+phonenumbers==8.13.0
 pytz==2022.6
 requests==2.28.1
+Shapely==1.8.5.post1
 simplejson==3.18.0
 sqlparse==0.4.3
 typing_extensions==4.4.0
