--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.5.2
+attrs==22.1.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
 Collectfast==2.2.0
@@ -12,18 +13,32 @@ django-phonenumbers==1.0.1
 django-rest-swagger==2.2.0
 django-storages==1.13.1
 djangorestframework==3.14.0
+exceptiongroup==1.0.4
+factory-boy==3.2.1
+Faker==15.3.3
 idna==3.4
+inflection==0.5.1
+iniconfig==1.1.1
 itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 numpy==1.23.5
 openapi-codec==1.3.2
+packaging==21.3
 phonenumbers==8.13.0
+pluggy==1.0.0
+pyparsing==3.0.9
+pytest==7.2.0
+pytest-django==4.5.2
+pytest-factoryboy==2.5.0
+python-dateutil==2.8.2
 pytz==2022.6
 requests==2.28.1
 Shapely==1.8.5.post1
 simplejson==3.18.0
+six==1.16.0
 sqlparse==0.4.3
+tomli==2.0.1
 typing_extensions==4.4.0
 uritemplate==4.1.1
 urllib3==1.26.13
