--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,9 @@ GitHub.sublime-settings
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+
+# serverless & node
+node_modules/
+.serverless
+*.zip
+*.DS_Store
