--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 asgiref==3.5.2
 attrs==22.1.0
+aws-psycopg2==1.3.8
+boto3==1.26.16
+botocore==1.29.16
 certifi==2022.9.24
 charset-normalizer==2.1.1
 Collectfast==2.2.0
@@ -21,6 +24,7 @@ inflection==0.5.1
 iniconfig==1.1.1
 itypes==1.2.0
 Jinja2==3.1.2
+jmespath==1.0.1
 MarkupSafe==2.1.1
 numpy==1.23.5
 openapi-codec==1.3.2
@@ -34,6 +38,7 @@ pytest-factoryboy==2.5.0
 python-dateutil==2.8.2
 pytz==2022.6
 requests==2.28.1
+s3transfer==0.6.0
 Shapely==1.8.5.post1
 simplejson==3.18.0
 six==1.16.0
@@ -42,3 +47,4 @@ tomli==2.0.1
 typing_extensions==4.4.0
 uritemplate==4.1.1
 urllib3==1.26.13
+Werkzeug==2.2.2
